--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.app.loyality'
+
 }
 
 dependencies {
@@ -65,6 +67,8 @@ dependencies {
     //dynamic size
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
+    //gson
+    implementation 'com.google.code.gson:gson:2.10'
     // Koin main features for Android (Scope,ViewModel ...)
     def koin_version = '3.1.2'
     implementation "io.insert-koin:koin-android:$koin_version"
