--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.activity:activity:1.8.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -98,10 +99,13 @@ dependencies {
     //required to avoid crash on Android 12 API 31
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
-    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.0'
+//    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.0'
     //For Bar Code Scanner
 //    implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.0'
 
     implementation ("com.github.bumptech.glide:glide:4.16.0")
+
+    //qr code
+//    implementation 'com.github.blikoon:QRCodeScanner:0.1.2'
 }
