--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="false"/>
+        android:required="false" />
 
     <application
         android:name=".common.app.MyApplication"
@@ -16,18 +16,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Outletorder">
-
+        android:theme="@style/Theme.Outletorder"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".features.manualInsert.ManualInsertActivity"
+            android:exported="false" />
         <activity
             android:name=".features.qrScanner.QrScannerActivity"
             android:exported="false" />
-
         <activity
             android:name=".features.barScanner.BarcodeReaderActivity"
             android:exported="false" />
         <activity
-            android:name=".features.manualInserting.ManualInsertSuccessActivity"
+            android:name=".features.manualInsert.ManualInsertSuccessActivity"
             android:exported="false" />
         <activity
             android:name=".features.noMemeber.NoMemberYetActivity"
@@ -39,7 +40,7 @@
             android:name=".features.rfidScanApproved.RFIDScanApprovedActivity"
             android:exported="false" />
         <activity
-            android:name=".features.manualInserting.ManualInsertingActivity"
+            android:name=".features.manualCheck.ManualCheckActivity"
             android:exported="false" />
         <activity
             android:name=".features.scanOption.ScanOptionsActivity"
